# pmd-red

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL.md  Makefile  README.md  VoiceDef.s  asmdiff.sh  build_newlib.sh  charmap.txt  data_dungeon.mk  data_item.mk  data_monster.mk  data_move.mk  data_pokemon.mk  dump_effect_sbin.py  dungeon_floor.mk  dungeon_item.mk  dungeon_main_data.mk  dungeon_pokemon.mk  dungeon_trap.mk  graphics.mk  ld_script.ld  ld_script.sed  ld_script.txt  ld_script_modern.ld  red.sha1  renames.sed  rom.md5  sym_ewram.txt  sym_ewram2.txt  sym_ewram_init.txt  sym_iwram.txt  sym_iwram_2.txt  sym_iwram_init.txt
asm/: adventure_log.s  arm_func.s  bg_palette_buffer.s  code.s  code_2.s  code_8002774.s  code_8002774_2.s  code_80035F0.s  code_80047E8.s  code_8004AA0.s  code_800558C.s  code_8005838.s  code_8006218.s  code_8009804.s  code_800AAA0.s  code_800B540.s  code_800B5F0.s  code_800C9CC.s  code_800D090.s  code_800DAC0.s  code_800E9E4.s  code_800ED38.s  code_800F990.s  code_8010F28.s  code_80118A4.s  code_8012A18.s  code_80130A8.s  code_80140DC.s  code_8015080.s  code_801AFA4.s  code_801B3C0.s  code_801C620.s  code_801D760.s  code_801DCC4.s  code_801EE10.s  code_801EE10_1.s  code_801EE10_mid.s  code_8023144.s  code_8023868.s  code_8027C84.s  (+222 more)
data/: common_strings.s  credits1.s  cutscenes_1.s  data.s  data1.s  data2.s  data_80B9BB0.s  data_80B9BB8.s  data_80B9BB8_2.s  data_80CE77C.s  data_80CE77C_2.s  data_80D47B8.s  data_80DAF70.s  data_80DBD98.s  data_80DC240.s  data_80DC464.s  data_80DED44.s  data_80E1F30.s  data_80E2068.s  data_80E59A8.s  (+72 more)
(+4835 files in other folders)
